==> Qsh-774/stm32-/指纹加蓝牙/BSP/Src/as608.c <==
#include <string.h>
#include <stdio.h>
#include "as608.h"
#include "manager.h"

static void MYUSART_SendData(u8 data)
{
	HAL_UART_Transmit(&huart2, &data,1,0xFFFF);
	//HAL_Delay(5);
}

static u8 *JudgeStr(u16 waittime)
{
  char now;
  u8 str[8];
  str[0] = 0xef;
  str[1] = 0x01;
  str[2] = AS608Addr >> 24;
  str[3] = AS608Addr >> 16;
  str[4] = AS608Addr >> 8;
  str[5] = AS608Addr;
  str[6] = 0x07;
  str[7] = '\0';

		
	HAL_UART_Receive(&huart2,(uint8_t *)data,9,0xFFFF);
	now=(data[7]<<8)+data[8];
	HAL_UART_Receive(&huart2,(uint8_t *)data,now,0xFFFF);
  return (uint8_t *)data;
}

u8 PS_HandShake(u32 *PS_Addr)
{
  u8  *data,now,*date;	
  SendHead();
  SendAddr();
  MYUSART_SendData(0X01);
  MYUSART_SendData(0X00);
  MYUSART_SendData(0X00);
  delay_ms(200);
  data = JudgeStr(2000);
	HAL_UART_Receive(&huart2,data,9,1000);
  HAL_UART_Receive(&huart2,date,(data[7]<<8)+data[8],1000);
    if(//判断是不是模块返回的应答包
      data[0] == 0XEF
      && data[1] == 0X01
      && data[6] == 0X07
    )
    {
      *PS_Addr = (data[2] << 24) + (data[3] << 16)
                 + (data[4] << 8) + (data[5]);

      return 0;
    }

  return 1;
}
